--- a/notifier/package.json
+++ b/notifier/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "node-notifier": "^6.0.0"
+        "node-notifier": "^10.0.0",
+        "shellwords": "^0.1.1"
     }
 }
